--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,2 +1,116 @@
-<h1>Carts#show</h1>
-<p>Find me in app/views/carts/show.html.erb</p>
+<center>
+<h2>Cart show</h2>
+<%= link_to 'Back to Product', { controller: 'products', action: 'index'} %> 
+
+<div class="card" style="width: 18rem;">
+<% @cart.line_items.each do |line_item| %>
+  <img class="card-img-top" <%= image_tag(line_item.product.images.first, {size: "300x300"}) %> 
+  <div class="card-body">
+    <h5 class="card-title">Item: <%= line_item.product.name %></h5>
+    <p class="card-text">Price: <%= (line_item.product.price) %></p>
+    <p class="card-text">Quantity: <%= (line_item.quantity) %></p>
+    <p class="card-text">Total Price: <%= (line_item.total_price) %></p>
+    <%= button_to "Add +", line_item_add_path(:id => line_item), method: :post %>
+    <%= button_to "Reduce -", line_item_reduce_path(:id => line_item), method: :post %><br>
+    <%= link_to "Proceed to checkout", new_order_path, class: "btn karl-checkout-btn" %><br>
+  </div>
+  </div>
+<% end %>
+<%= link_to "Empty cart", cart_path(@current_cart),method: :delete, data: {confirm: "Are you sure?"} %>
+</div>
+</center>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <div class="cart-table clearfix">
+        <table class="table table-responsive">
+            <thead>
+              <tr>
+                <th>Product</th>
+                <th>Price</th>
+                <th>Quantity</th>
+                <th>Total</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="cart_product_img d-flex align-items-center">
+                <a href="#"><img src="img/product-img/product-9.jpg" alt="Product"></a>
+                <h6>Yellow Cocktail Dress</h6>
+                </td>
+                <td class="price"><span>$49.88</span></td>
+                <td class="qty">
+                  <div class="quantity">
+                    <span class="qty-minus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty > 1 ) effect.value--;return false;"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                    <input type="number" class="qty-text" id="qty" step="1" min="1" max="99" name="quantity" value="1">
+                    <span class="qty-plus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;"><i class="fa fa-plus" aria-hidden="true"></i></span>
+                  </div>
+                </td>
+                <td class="total_price"><span>$49.88</span></td>
+              </tr>
+            </tbody>
+        </table>
+      </div>
+      <div class="cart-footer d-flex mt-30">
+        <div class="back-to-shop w-50">
+          <a href="shop-grid-left-sidebar.html">Continue shooping</a>
+        </div>
+        <div class="update-checkout w-50 text-right">
+          <a href="#">clear cart</a>
+          <a href="#">Update cart</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="coupon-code-area mt-70">
+        <div class="cart-page-heading">
+          <h5>Cupon code</h5>
+          <p>Enter your cupone code</p>
+        </div>
+        <form action="#">
+        <input type="search" name="search" placeholder="#569ab15">
+        <button type="submit">Apply</button>
+        </form>
+      </div>
+    </div>
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="shipping-method-area mt-70">
+        <div class="cart-page-heading">
+          <h5>Shipping method</h5>
+          <p>Select the one you want</p>
+        </div>
+        <div class="custom-control custom-radio mb-30">
+          <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
+          <label class="custom-control-label d-flex align-items-center justify-content-between" for="customRadio1"><span>Next day delivery</span><span>$4.99</span></label>
+        </div>
+        <div class="custom-control custom-radio mb-30">
+          <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
+          <label class="custom-control-label d-flex align-items-center justify-content-between" for="customRadio2"><span>Standard delivery</span><span>$1.99</span></label>
+        </div>
+        <div class="custom-control custom-radio">
+          <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input">
+          <label class="custom-control-label d-flex align-items-center justify-content-between" for="customRadio3"><span>Personal Pickup</span><span>Free</span></label>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-lg-4">
+      <div class="cart-total-area mt-70">
+        <div class="cart-page-heading">
+          <h5>Cart total</h5>
+          <p>Final info</p>
+        </div>
+        <ul class="cart-total-chart">
+        <li><span>Subtotal</span> <span>$59.90</span></li>
+        <li><span>Shipping</span> <span>Free</span></li>
+        <li><span><strong>Total</strong></span> <span><strong>$59.90</strong></span></li>
+        </ul>
+        <a href="checkout.html" class="btn karl-checkout-btn">Proceed to checkout</a>
+      </div>
+    </div>
+  </div>
+</div>
