--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,29 +1,55 @@
 
-<div style="background-color:Green;">
-<center>
-<h1 class="container ">Home</h1>
-<%= link_to "Log in", new_session_path(:user) %><br />
-<p>Welcome </p>
-</center>
-</div>
-
-<li class="nav-item dropdown">
- <a class="nav-link dropdown-toggle" href="#" id="karlDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
-    <div class="dropdown-menu" aria-labelledby="karlDropdown">
-    <a class="dropdown-item" href="index.home">Home</a>
-    <a class="dropdown-item" href="shop.html">Shop</a>
-    <a class="dropdown-item" href="index.products">Product Details</a>
-    <a class="dropdown-item" href="cart.html">Cart</a>
-    <a class="dropdown-item" href="checkout.html">Checkout</a>
+<div class="main_header_area">
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-12 d-md-flex justify-content-between">
+                <div class="header-social-area">
+                </div>
+                <div class="main-menu-area">
+                    <nav class="navbar navbar-expand-lg align-items-start">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#karl-navbar" aria-controls="karl-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"><i class="ti-menu"></i></span></button>
+                    <div class="collapse navbar-collapse align-items-start collapse" id="karl-navbar">
+                        <ul class="navbar-nav animated" id="nav">
+                            <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                             <a <%= link_to 'Product Details', { controller: 'products', action: 'index'}, class: "dropdown-item" %></a>
+                             <a <%= link_to "Cart", cart_path(@current_cart), :class =>"dropdown-item" %></a>
+                             <a><%= link_to 'Checkout', { controller: 'addresses', action: 'new'}, class: "dropdown-item" %> </a>
+                            </div>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="#">Dresses</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"> Shoes</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    </nav>
+                </div>
+                <div class="help-line">
+                    <a href="tel:+346573556778"><i class="ti-headphone-alt"></i> +91 996677882533</a>
+                </div>
+            </div>
+        </div>
     </div>
-</li>
-
-
-
-
-<div>
-<a style="background-color:DodgerBlue;">
-<%= link_to 'See Products', { controller: 'products', action: 'index'} %>   
-</a>
 </div>
+
+
+<section class="top-discount-area d-md-flex align-items-center">
+       <!-- Single Discount Area -->
+        <div class="single-discount-area">
+            <h5>Free Shipping &amp; Returns</h5>
+            <h6><a href= "<%= products_path(@product) %>" >BUY NOW</a></h6>
+        </div>
+        <!-- Single Discount Area -->
+        <div class="single-discount-area">
+            <h5>20% Discount for all dresses</h5>
+            <h6>USE CODE: Colorlib</h6>
+        </div>
+            <!-- Single Discount Area -->
+        <div class="single-discount-area">
+            <h5>20% Discount for students</h5>
+            <h6>USE CODE: Colorlib</h6>
+        </div>
+</section>
 
